dwh_005 add swagger
